Basic image gallery

--- a/index.html
+++ b/index.html
@@ -15,7 +15,44 @@
     <link type="text/css" rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <p>This is my JavaScript and jQuery Assignment.</p>
+    <div class="container">
+
+      <header>
+        <h1>Gallery</h1>
+      </header>
+
+      <div class="table">
+        <div class="row" id="row1">
+          <div class="cell">
+            <figure>
+              <img src="images/1.jpg" width="250px">
+              <figcaption>Image</figcaption>
+            </figure>
+          </div>
+          <div class="cell">
+            <figure>
+              <img src="images/1.jpg" width="250px">
+              <figcaption>Image</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="row" id="row2">
+          <div class="cell">
+            <figure>
+              <img src="images/1.jpg" width="250px">
+              <figcaption>Image</figcaption>
+            </figure>
+          </div>
+          <div class="cell">
+            <figure>
+              <img src="images/1.jpg" width="250px">
+              <figcaption>Image</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
     <!-- jQuery -->
     <script src="js/jquery-3.5.1.min.js"></script>
