--- a/index.html
+++ b/index.html
@@ -16,40 +16,65 @@
   </head>
   <body>
     <div class="container">
-
       <header>
-        <h1>Gallery</h1>
+        <h1>Table</h1>
       </header>
+      <br>
 
+      <div class="user">
+        <h3>What would you like to do with the table?</h3>
+        <br>
+
+        <div class="row">
+          <div class="col">
+            <h4>Add a row</h4>
+          </div>
+          <div class="col">
+            <h4>Add a column</h4>
+          </div>
+          <div class="col">
+            <h4>Remove a row</h4>
+          </div>
+          <div class="col">
+            <h4>Remove a column</h4>
+          </div>
+        </div>
+      </div>
+      <br>
+      
       <div class="table">
-        <div class="row" id="row1">
-          <div class="cell">
-            <figure>
-              <img src="images/1.jpg" width="250px">
-              <figcaption>Image</figcaption>
-            </figure>
-          </div>
-          <div class="cell">
-            <figure>
-              <img src="images/1.jpg" width="250px">
-              <figcaption>Image</figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="row" id="row2">
-          <div class="cell">
-            <figure>
-              <img src="images/1.jpg" width="250px">
-              <figcaption>Image</figcaption>
-            </figure>
-          </div>
-          <div class="cell">
-            <figure>
-              <img src="images/1.jpg" width="250px">
-              <figcaption>Image</figcaption>
-            </figure>
-          </div>
-        </div>
+        <table>
+          <tr class="row0">
+            <th>Number</th>
+            <th>Name</th>
+            <th>Colour</th>
+            <th>Item</th>
+          </tr>
+          <tr class="row1">
+            <td>1</td>
+            <td>Aoife</td>
+            <td>Black</td>
+            <td>Chair</td>
+          </tr>
+          <tr class="row2">
+            <td>2</td>
+            <td>Rajesh</td>
+            <td>Orange</td>
+            <td>Spoon</td>
+          </tr>
+          <tr class="row3">
+            <td>3</td>
+            <td>Kuba</td>
+            <td>Cyan</td>
+            <td>Brush</td>
+          </tr>
+          <tr class="row4">
+            <td>4</td>
+            <td>Ginny</td>
+            <td>Purple</td>
+            <td>Card</td>
+          </tr>
+        </table>
       </div>
 
     </div>
