--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
 
       <div class="table">
-        <h1>What would you like to do with the table?</h1>
+        <h1 id="heading">What would you like to do with the table?</h1>
         <h4>Add a row to table body</h4>
         <input type="number" onfocus="this.value=''" placeholder="Number" id="input1">
         <br>
@@ -33,8 +33,12 @@
 
         <h4>Remove a row from table body</h4>
         <input type="text" onfocus="this.value=''" placeholder="Row number" id="input5">
+        <span class="error" aria-live="polite"></span>
         <br>
-        <button type="submit" onSubmit="validate()" class="btn-primary" id="rowRemBtn">Remove a row</button>
+        <button type="submit" onSubmit="validate() " class="btn-primary" id="rowRemBtn">Remove a row</button>
+        <br>
+        <h4>Get number of rows in table body</h4>
+        <button type="submit" class="btn-primary" id="rowCountBtn">Count rows</button>
         <br>
 
         <table id="table" width="1000px">
